[gd_scene load_steps=16 format=3 uid="uid://cb1jy3pa1b4tk"]

[ext_resource type="Script" uid="uid://bh68skub6e6g7" path="res://scripts/game_elements/LightBeam.gd" id="1_lightbeam_gd"]
[ext_resource type="Texture2D" uid="uid://dtuskl36s3y3u" path="res://assets/sprites/glowing_circle.png" id="2_o32h6"]
[ext_resource type="Texture2D" uid="uid://cf45w55l6ye0o" path="res://assets/sprites/mirror/arrow.png" id="3_151hs"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_151hs"]
light_mode = 1

[sub_resource type="Gradient" id="1"]
offsets = PackedFloat32Array(0.582915, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="2"]
gradient = SubResource("1")

[sub_resource type="Curve" id="3"]
_data = [Vector2(0.518072, 1), 0.0, -3.53434, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="4"]
width = 2048
curve = SubResource("3")

[sub_resource type="ParticleProcessMaterial" id="5"]
initial_velocity_min = 100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.5
scale_curve = SubResource("4")
color_ramp = SubResource("2")

[sub_resource type="Gradient" id="Gradient_3f48o"]
offsets = PackedFloat32Array(0, 0.719557, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4t126"]
gradient = SubResource("Gradient_3f48o")

[sub_resource type="Curve" id="6"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.503614, 0.957505), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="7"]
curve = SubResource("6")

[sub_resource type="ParticleProcessMaterial" id="8"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(589.055, 20, 1)
direction = Vector3(-1, 0, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
tangential_accel_min = 100.0
tangential_accel_max = 100.0
scale_min = 0.3
scale_max = 0.3
scale_curve = SubResource("7")
color_ramp = SubResource("GradientTexture1D_4t126")

[sub_resource type="ParticleProcessMaterial" id="9"]
particle_flag_disable_z = true
spread = 50.0
initial_velocity_min = 300.0
initial_velocity_max = 300.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.5
scale_curve = SubResource("4")
color_ramp = SubResource("2")

[node name="LaserBeam2D" type="RayCast2D"]
target_position = Vector2(5000, 0)
collision_mask = 2
collide_with_areas = true
script = ExtResource("1_lightbeam_gd")
max_length = 5000.0
start_distance = 0.0
color = Color(0.771106, 0.602921, 0.226563, 1)
is_casting = true

[node name="Line2D" type="Line2D" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0.771106, 0.602921, 0.226563, 1)
self_modulate = Color(2, 2, 0, 1)
material = SubResource("CanvasItemMaterial_151hs")
points = PackedVector2Array(0, 0, 0, 0)
width = 20.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 8.0

[node name="CastingParticles2D" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.771106, 0.602921, 0.226563, 1)
self_modulate = Color(2, 2, 1, 1)
show_behind_parent = true
texture = ExtResource("2_o32h6")
lifetime = 0.3
visibility_rect = Rect2(0, -18.722, 29.6756, 38.4841)
process_material = SubResource("5")

[node name="BeamParticles2D" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.771106, 0.602921, 0.226563, 1)
self_modulate = Color(2, 2, 0, 1)
position = Vector2(2500, 0)
amount = 50
texture = ExtResource("2_o32h6")
preprocess = 1.0
randomness = 1.0
visibility_rect = Rect2(-2500, -2500.57, 5000, 5000)
process_material = SubResource("8")

[node name="CollisionParticles2D" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.771106, 0.602921, 0.226563, 1)
self_modulate = Color(2, 2, 0, 1)
show_behind_parent = true
emitting = false
amount = 16
texture = ExtResource("2_o32h6")
lifetime = 0.3
visibility_rect = Rect2(-2500, -2500, 5000, 5000)
process_material = SubResource("9")

[node name="AngleUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 307.0
offset_top = -17.0
offset_right = 347.0
offset_bottom = 23.0

[node name="DirectionArrow" type="Sprite2D" parent="AngleUI"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_151hs")

[node name="AngleLabel" type="Label" parent="AngleUI"]
layout_mode = 0
offset_left = -23.0
offset_top = -25.0
offset_right = 17.0
offset_bottom = -2.0
